parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS
Rule 2     PROGRAM_A -> VARS PROGRAM_A
Rule 3     PROGRAM_A -> METHOD PROGRAM_B
Rule 4     PROGRAM_A -> empty
Rule 5     PROGRAM_B -> METHOD PROGRAM_B
Rule 6     PROGRAM_B -> empty
Rule 7     VARS -> var VARS_A
Rule 8     VARS_A -> TYPE colon VARS_B semicolon VARS_C
Rule 9     VARS_B -> SIMPLE
Rule 10    VARS_B -> LIST
Rule 11    VARS_C -> VARS_A
Rule 12    VARS_C -> empty
Rule 13    SIMPLE -> id SAVE_VAR SIMPLE_A
Rule 14    SIMPLE_A -> comma SIMPLE
Rule 15    SIMPLE_A -> empty
Rule 16    LIST -> id lSqrBracket VARCONSTAUX rSqrBracket SAVE_ARRAY LIST_A
Rule 17    LIST_A -> comma LIST
Rule 18    LIST_A -> empty
Rule 19    EXPLOG -> EXPRESSION EXPLOG_A SOLVE_OPERATION_LOGIC
Rule 20    EXPLOG -> not EXPRESSION EXPLOG_A SOLVE_OPERATION_LOGIC
Rule 21    EXPLOG_A -> and EXPLOG
Rule 22    EXPLOG_A -> or EXPLOG
Rule 23    EXPLOG_A -> empty
Rule 24    EXPRESSION -> EXP
Rule 25    EXPRESSION -> EXP EXPRESSION_A EXP SOLVE_OPERATION_RELATIONSHIP
Rule 26    EXPRESSION_A -> greater PUSH_STACK_OPERATORS
Rule 27    EXPRESSION_A -> lessThan PUSH_STACK_OPERATORS
Rule 28    EXPRESSION_A -> greaterEquals PUSH_STACK_OPERATORS
Rule 29    EXPRESSION_A -> lessThanEquals PUSH_STACK_OPERATORS
Rule 30    EXPRESSION_A -> equals PUSH_STACK_OPERATORS
Rule 31    EXPRESSION_A -> notEquals PUSH_STACK_OPERATORS
Rule 32    EXP -> TERM SOLVE_OPERATION_SUM_MINUS
Rule 33    EXP -> TERM SOLVE_OPERATION_SUM_MINUS EXP_A
Rule 34    EXP_A -> plus PUSH_STACK_OPERATORS EXP
Rule 35    EXP_A -> minus PUSH_STACK_OPERATORS EXP
Rule 36    TERM -> FACTOR SOLVE_OPERATION_TIMES_DIVIDE
Rule 37    TERM -> FACTOR SOLVE_OPERATION_TIMES_DIVIDE TERM_A
Rule 38    TERM_A -> times PUSH_STACK_OPERATORS TERM
Rule 39    TERM_A -> divide PUSH_STACK_OPERATORS TERM
Rule 40    FACTOR -> lParenthesis PUSH_STACK_OPERATORS EXPLOG rParenthesis POP_STACK_OPERATORS
Rule 41    FACTOR -> VARCONSTAUX
Rule 42    VARCONSTAUX -> id PUSH_STACK_OPERANDS ISLIST
Rule 43    VARCONSTAUX -> cte_i PUSH_STACK_OPERANDS
Rule 44    VARCONSTAUX -> cte_f PUSH_STACK_OPERANDS
Rule 45    TYPE -> int SAVE_TYPE
Rule 46    TYPE -> float SAVE_TYPE
Rule 47    TYPE -> string SAVE_TYPE
Rule 48    TYPE -> bool SAVE_TYPE
Rule 49    BLOCK -> lCurlyBracket BLOCK_A rCurlyBracket
Rule 50    BLOCK_A -> STATEMENT BLOCK_A
Rule 51    BLOCK_A -> empty
Rule 52    STATEMENT -> ASSIGNMENT
Rule 53    STATEMENT -> CONDITION
Rule 54    STATEMENT -> WRITE
Rule 55    STATEMENT -> PRE_CONDITIONAL_LOOP
Rule 56    STATEMENT -> POST_CONDITIONAL_LOOP
Rule 57    STATEMENT -> METHODCALL
Rule 58    STATEMENT -> READ
Rule 59    STATEMENT -> STATMETHODS
Rule 60    STATEMENT -> RETURN
Rule 61    ASSIGNMENT -> id PUSH_STACK_OPERANDS ISLIST assign PUSH_STACK_OPERATORS EXPLOG SOLVE_OPERATION_ASSIGNMENT semicolon
Rule 62    READ -> scan lParenthesis VARCTE READ_A rParenthesis
Rule 63    READ_A -> comma
Rule 64    READ_A -> empty
Rule 65    ISLIST -> lSqrBracket EXP rSqrBracket
Rule 66    ISLIST -> empty
Rule 67    TYPEMETHOD -> TYPE
Rule 68    TYPEMETHOD -> void SAVE_TYPE
Rule 69    CONDITION -> if lParenthesis EXPLOG rParenthesis GENERATE_GOTOF_CONDITIONAL BLOCK CONDITION_A SOLVE_OPERATION_CONDITIONAL
Rule 70    CONDITION_A -> else GENERATE_GOTO_CONDITIONAL BLOCK
Rule 71    CONDITION_A -> empty
Rule 72    WRITE -> print lParenthesis EXPRESSION GENERATE_QUAD_PRINT WRITE_A rParenthesis semicolon
Rule 73    WRITE_A -> comma EXPRESSION GENERATE_QUAD_PRINT WRITE_A
Rule 74    WRITE_A -> empty
Rule 75    VARCTE -> id ISLIST
Rule 76    VARCTE -> cte_i
Rule 77    VARCTE -> cte_f
Rule 78    VARCTE -> cte_str
Rule 79    VARCTE -> BOOLEAN
Rule 80    METHOD -> func TYPEMETHOD id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
Rule 81    METHOD_A -> PARAMS
Rule 82    METHOD_A -> empty
Rule 83    PARAMS -> TYPE id SAVE_VAR SAVE_PARAM_TYPE INCREMENT_PARAM_COUNTER PARAMS_A
Rule 84    PARAMS_A -> comma PARAMS
Rule 85    PARAMS_A -> empty
Rule 86    PRE_CONDITIONAL_LOOP -> while PUSH_STACK_JUMPS lParenthesis EXPLOG rParenthesis GENERATE_GOTOF_CONDITIONAL BLOCK SOLVE_OPERATION_PRE_CONDITIONAL_LOOP
Rule 87    POST_CONDITIONAL_LOOP -> do PUSH_STACK_JUMPS BLOCK while lParenthesis EXPLOG rParenthesis SOLVE_OPERATION_POST_CONDITIONAL_LOOP
Rule 88    METHODCALL -> id VALIDATE_FUNCTION_NAME ERA lParenthesis EXP VALIDATE_PARAMETER METHODCALL_A rParenthesis semicolon VALIDATE_METHOD_CALL
Rule 89    METHODCALL_A -> comma EXP
Rule 90    METHODCALL_A -> empty
Rule 91    RETURN -> return EXPLOG semicolon
Rule 92    BOOLEAN -> FALSE
Rule 93    BOOLEAN -> TRUE
Rule 94    STATMETHODS -> ORDINARY_LEAST_SQUARES
Rule 95    STATMETHODS -> LASSO
Rule 96    STATMETHODS -> RIDGE
Rule 97    STATMETHODS -> K_MEANS
Rule 98    STATMETHODS -> MINI_BATCH_MEANS
Rule 99    STATMETHODS -> TIME_SERIES_SPLIT
Rule 100   STATMETHODS -> MEAN_ABSOLUTE_ERROR
Rule 101   STATMETHODS -> MEAN_SQUARED_ERROR
Rule 102   STATMETHODS -> MEDIAN_ABSOLUTE_ERROR
Rule 103   STATMETHODS -> MEAN
Rule 104   STATMETHODS -> MODE
Rule 105   STATMETHODS -> MEDIAN
Rule 106   STATMETHODS -> PROBABILITY
Rule 107   STATMETHODS -> FREQUENCY
Rule 108   STATMETHODS -> VARIANCE
Rule 109   STATMETHODS -> STANDARD_DEVIATION
Rule 110   STATMETHODS -> SKEWNESS
Rule 111   STATMETHODS -> KURTOSI
Rule 112   ORDINARY_LEAST_SQUARES -> ols lParenthesis id comma id comma BOOLEAN comma BOOLEAN comma VARCONSTAUX comma BOOLEAN rParenthesis semicolon
Rule 113   LASSO -> las lParenthesis id comma id comma VARCONSTAUX comma BOOLEAN comma BOOLEAN comma VARCONSTAUX comma BOOLEAN comma BOOLEAN comma BOOLEAN comma VARCONSTAUX comma string comma float comma BOOLEAN rParenthesis semicolon
Rule 114   RIDGE -> rid lParenthesis id comma id comma VARCONSTAUX comma BOOLEAN comma BOOLEAN comma BOOLEAN comma VARCONSTAUX comma VARCONSTAUX comma string comma VARCONSTAUX rParenthesis semicolon
Rule 115   K_MEANS -> kmeans lParenthesis VARCONSTAUX comma string comma VARCONSTAUX comma VARCONSTAUX comma VARCONSTAUX comma string comma VARCONSTAUX comma VARCONSTAUX comma BOOLEAN comma VARCONSTAUX comma string rParenthesis semicolon
Rule 116   MINI_BATCH_MEANS -> mbm lParenthesis VARCONSTAUX comma string comma VARCONSTAUX comma VARCONSTAUX comma BOOLEAN comma BOOLEAN comma VARCONSTAUX comma VARCONSTAUX comma VARCONSTAUX comma VARCONSTAUX comma VARCONSTAUX comma VARCONSTAUX rParenthesis semicolon
Rule 117   TIME_SERIES_SPLIT -> tseries lParenthesis VARCONSTAUX comma VARCONSTAUX rParenthesis semicolon
Rule 118   MEAN_ABSOLUTE_ERROR -> mean_abs_err lParenthesis id comma id rParenthesis semicolon
Rule 119   MEAN_SQUARED_ERROR -> mean_sqr_err lParenthesis id comma id rParenthesis semicolon
Rule 120   MEDIAN_ABSOLUTE_ERROR -> median_abs_err lParenthesis id comma id rParenthesis semicolon
Rule 121   MEAN -> mean lParenthesis id MEAN_A rParenthesis semicolon
Rule 122   MEAN_A -> comma id MEAN_A
Rule 123   MEAN_A -> empty
Rule 124   MODE -> mode lParenthesis id MODE_A rParenthesis semicolon
Rule 125   MODE_A -> comma id MODE_A
Rule 126   MODE_A -> empty
Rule 127   MEDIAN -> median lParenthesis id MEDIAN_A rParenthesis semicolon
Rule 128   MEDIAN_A -> comma id MEDIAN_A
Rule 129   MEDIAN_A -> empty
Rule 130   PROBABILITY -> prob lParenthesis id PROBABILITY_A rParenthesis semicolon
Rule 131   PROBABILITY_A -> comma id PROBABILITY_A
Rule 132   PROBABILITY_A -> empty
Rule 133   FREQUENCY -> freq lParenthesis id FREQUENCY_A rParenthesis semicolon
Rule 134   FREQUENCY_A -> comma id FREQUENCY_A
Rule 135   FREQUENCY_A -> empty
Rule 136   VARIANCE -> variance lParenthesis id VARIANCE_A rParenthesis semicolon
Rule 137   VARIANCE_A -> comma id VARIANCE_A
Rule 138   VARIANCE_A -> empty
Rule 139   STANDARD_DEVIATION -> stddev lParenthesis id STANDARD_DEVIATION_A rParenthesis semicolon
Rule 140   STANDARD_DEVIATION_A -> comma id STANDARD_DEVIATION_A
Rule 141   STANDARD_DEVIATION_A -> empty
Rule 142   SKEWNESS -> skew lParenthesis id SKEWNESS_A rParenthesis semicolon
Rule 143   SKEWNESS_A -> comma id SKEWNESS_A
Rule 144   SKEWNESS_A -> empty
Rule 145   KURTOSI -> kurt lParenthesis id KURTOSI_A rParenthesis semicolon
Rule 146   KURTOSI_A -> comma id KURTOSI_A
Rule 147   KURTOSI_A -> empty
Rule 148   empty -> <empty>
Rule 149   START_FUNCTION -> empty
Rule 150   SAVE_TYPE -> empty
Rule 151   SAVE_VAR -> empty
Rule 152   SAVE_ARRAY -> empty
Rule 153   INCREMENT_PARAM_COUNTER -> empty
Rule 154   SAVE_COUNTER_PARAM -> empty
Rule 155   SAVE_COUNTER_QUAD -> empty
Rule 156   END_PROCEDURE -> empty
Rule 157   SAVE_PARAM_TYPE -> empty
Rule 158   VALIDATE_FUNCTION_NAME -> empty
Rule 159   ERA -> empty
Rule 160   VALIDATE_PARAMETER -> empty
Rule 161   VALIDATE_METHOD_CALL -> empty
Rule 162   PUSH_STACK_OPERANDS -> empty
Rule 163   PUSH_STACK_OPERATORS -> empty
Rule 164   POP_STACK_OPERATORS -> empty
Rule 165   SOLVE_OPERATION_SUM_MINUS -> empty
Rule 166   SOLVE_OPERATION_TIMES_DIVIDE -> empty
Rule 167   SOLVE_OPERATION_RELATIONSHIP -> empty
Rule 168   SOLVE_OPERATION_LOGIC -> empty
Rule 169   SOLVE_OPERATION_ASSIGNMENT -> empty
Rule 170   GENERATE_GOTOF_CONDITIONAL -> empty
Rule 171   SOLVE_OPERATION_CONDITIONAL -> empty
Rule 172   GENERATE_GOTO_CONDITIONAL -> empty
Rule 173   PUSH_STACK_JUMPS -> empty
Rule 174   SOLVE_OPERATION_PRE_CONDITIONAL_LOOP -> empty
Rule 175   SOLVE_OPERATION_POST_CONDITIONAL_LOOP -> empty
Rule 176   GENERATE_QUAD_PRINT -> empty
Rule 177   PRINTQUADS -> empty

Terminals, with rules where they appear

FALSE                : 92
TRUE                 : 93
and                  : 21
assign               : 61
bool                 : 48
colon                : 8
comma                : 14 17 63 73 84 89 112 112 112 112 112 113 113 113 113 113 113 113 113 113 113 113 113 114 114 114 114 114 114 114 114 114 115 115 115 115 115 115 115 115 115 115 116 116 116 116 116 116 116 116 116 116 116 117 118 119 120 122 125 128 131 134 137 140 143 146
cte_f                : 44 77
cte_i                : 43 76
cte_str              : 78
divide               : 39
do                   : 87
else                 : 70
equals               : 30
error                : 
float                : 46 113
freq                 : 133
func                 : 80
globalFunc           : 1
greater              : 26
greaterEquals        : 28
id                   : 13 16 42 61 75 80 83 88 112 112 113 113 114 114 118 118 119 119 120 120 121 122 124 125 127 128 130 131 133 134 136 137 139 140 142 143 145 146
if                   : 69
int                  : 45
kmeans               : 115
kurt                 : 145
lCurlyBracket        : 49
lParenthesis         : 40 62 69 72 80 86 87 88 112 113 114 115 116 117 118 119 120 121 124 127 130 133 136 139 142 145
lSqrBracket          : 16 65
las                  : 113
lessThan             : 27
lessThanEquals       : 29
mbm                  : 116
mean                 : 121
mean_abs_err         : 118
mean_sqr_err         : 119
median               : 127
median_abs_err       : 120
minus                : 35
mode                 : 124
not                  : 20
notEquals            : 31
ols                  : 112
or                   : 22
plus                 : 34
print                : 72
prob                 : 130
program              : 1
rCurlyBracket        : 49
rParenthesis         : 40 62 69 72 80 86 87 88 112 113 114 115 116 117 118 119 120 121 124 127 130 133 136 139 142 145
rSqrBracket          : 16 65
return               : 91
rid                  : 114
scan                 : 62
semicolon            : 1 8 61 72 88 91 112 113 114 115 116 117 118 119 120 121 124 127 130 133 136 139 142 145
skew                 : 142
start                : 1
stddev               : 139
string               : 47 113 114 115 115 115 116
times                : 38
tseries              : 117
var                  : 7
variance             : 136
void                 : 1 1 68
while                : 86 87

Nonterminals, with rules where they appear

ASSIGNMENT           : 52
BLOCK                : 1 69 70 80 86 87
BLOCK_A              : 49 50
BOOLEAN              : 79 112 112 112 113 113 113 113 113 113 114 114 114 115 116 116
CONDITION            : 53
CONDITION_A          : 69
END_PROCEDURE        : 80
ERA                  : 88
EXP                  : 24 25 25 34 35 65 88 89
EXPLOG               : 21 22 40 61 69 86 87 91
EXPLOG_A             : 19 20
EXPRESSION           : 19 20 72 73
EXPRESSION_A         : 25
EXP_A                : 33
FACTOR               : 36 37
FREQUENCY            : 107
FREQUENCY_A          : 133 134
GENERATE_GOTOF_CONDITIONAL : 69 86
GENERATE_GOTO_CONDITIONAL : 70
GENERATE_QUAD_PRINT  : 72 73
INCREMENT_PARAM_COUNTER : 83
ISLIST               : 42 61 75
KURTOSI              : 111
KURTOSI_A            : 145 146
K_MEANS              : 97
LASSO                : 95
LIST                 : 10 17
LIST_A               : 16
MEAN                 : 103
MEAN_A               : 121 122
MEAN_ABSOLUTE_ERROR  : 100
MEAN_SQUARED_ERROR   : 101
MEDIAN               : 105
MEDIAN_A             : 127 128
MEDIAN_ABSOLUTE_ERROR : 102
METHOD               : 3 5
METHODCALL           : 57
METHODCALL_A         : 88
METHOD_A             : 80
MINI_BATCH_MEANS     : 98
MODE                 : 104
MODE_A               : 124 125
ORDINARY_LEAST_SQUARES : 94
PARAMS               : 81 84
PARAMS_A             : 83
POP_STACK_OPERATORS  : 40
POST_CONDITIONAL_LOOP : 56
PRE_CONDITIONAL_LOOP : 55
PRINTQUADS           : 1
PROBABILITY          : 106
PROBABILITY_A        : 130 131
PROGRAM              : 0
PROGRAM_A            : 1 2
PROGRAM_B            : 3 5
PUSH_STACK_JUMPS     : 86 87
PUSH_STACK_OPERANDS  : 42 43 44 61
PUSH_STACK_OPERATORS : 26 27 28 29 30 31 34 35 38 39 40 61
READ                 : 58
READ_A               : 62
RETURN               : 60
RIDGE                : 96
SAVE_ARRAY           : 16
SAVE_COUNTER_PARAM   : 80
SAVE_COUNTER_QUAD    : 80
SAVE_PARAM_TYPE      : 83
SAVE_TYPE            : 1 1 45 46 47 48 68
SAVE_VAR             : 13 83
SIMPLE               : 9 14
SIMPLE_A             : 13
SKEWNESS             : 110
SKEWNESS_A           : 142 143
SOLVE_OPERATION_ASSIGNMENT : 61
SOLVE_OPERATION_CONDITIONAL : 69
SOLVE_OPERATION_LOGIC : 19 20
SOLVE_OPERATION_POST_CONDITIONAL_LOOP : 87
SOLVE_OPERATION_PRE_CONDITIONAL_LOOP : 86
SOLVE_OPERATION_RELATIONSHIP : 25
SOLVE_OPERATION_SUM_MINUS : 32 33
SOLVE_OPERATION_TIMES_DIVIDE : 36 37
STANDARD_DEVIATION   : 109
STANDARD_DEVIATION_A : 139 140
START_FUNCTION       : 1 1 80
STATEMENT            : 50
STATMETHODS          : 59
TERM                 : 32 33 38 39
TERM_A               : 37
TIME_SERIES_SPLIT    : 99
TYPE                 : 8 67 83
TYPEMETHOD           : 80
VALIDATE_FUNCTION_NAME : 88
VALIDATE_METHOD_CALL : 88
VALIDATE_PARAMETER   : 88
VARCONSTAUX          : 16 41 112 113 113 113 114 114 114 114 115 115 115 115 115 115 115 116 116 116 116 116 116 116 116 116 117 117
VARCTE               : 62
VARIANCE             : 108
VARIANCE_A           : 136 137
VARS                 : 2
VARS_A               : 7 11
VARS_B               : 8
VARS_C               : 8
WRITE                : 54
WRITE_A              : 72 73
empty                : 4 6 12 15 18 23 51 64 66 71 74 82 85 90 123 126 129 132 135 138 141 144 147 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . program void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS

    program         shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> program . void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS

    void            shift and go to state 3


state 3

    (1) PROGRAM -> program void . SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    globalFunc      reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) PROGRAM -> program void SAVE_TYPE . globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS

    globalFunc      shift and go to state 6


state 5

    (150) SAVE_TYPE -> empty .

    globalFunc      reduce using rule 150 (SAVE_TYPE -> empty .)
    start           reduce using rule 150 (SAVE_TYPE -> empty .)
    colon           reduce using rule 150 (SAVE_TYPE -> empty .)
    id              reduce using rule 150 (SAVE_TYPE -> empty .)


state 6

    (1) PROGRAM -> program void SAVE_TYPE globalFunc . START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS
    (149) START_FUNCTION -> . empty
    (148) empty -> .

    semicolon       reduce using rule 148 (empty -> .)

    START_FUNCTION                 shift and go to state 7
    empty                          shift and go to state 8

state 7

    (1) PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION . semicolon PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS

    semicolon       shift and go to state 9


state 8

    (149) START_FUNCTION -> empty .

    semicolon       reduce using rule 149 (START_FUNCTION -> empty .)
    lParenthesis    reduce using rule 149 (START_FUNCTION -> empty .)
    lCurlyBracket   reduce using rule 149 (START_FUNCTION -> empty .)


state 9

    (1) PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION semicolon . PROGRAM_A void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS
    (2) PROGRAM_A -> . VARS PROGRAM_A
    (3) PROGRAM_A -> . METHOD PROGRAM_B
    (4) PROGRAM_A -> . empty
    (7) VARS -> . var VARS_A
    (80) METHOD -> . func TYPEMETHOD id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
    (148) empty -> .

    var             shift and go to state 14
    func            shift and go to state 15
    void            reduce using rule 148 (empty -> .)

    PROGRAM_A                      shift and go to state 10
    VARS                           shift and go to state 11
    METHOD                         shift and go to state 12
    empty                          shift and go to state 13

state 10

    (1) PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A . void SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS

    void            shift and go to state 16


state 11

    (2) PROGRAM_A -> VARS . PROGRAM_A
    (2) PROGRAM_A -> . VARS PROGRAM_A
    (3) PROGRAM_A -> . METHOD PROGRAM_B
    (4) PROGRAM_A -> . empty
    (7) VARS -> . var VARS_A
    (80) METHOD -> . func TYPEMETHOD id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
    (148) empty -> .

    var             shift and go to state 14
    func            shift and go to state 15
    void            reduce using rule 148 (empty -> .)

    VARS                           shift and go to state 11
    PROGRAM_A                      shift and go to state 17
    METHOD                         shift and go to state 12
    empty                          shift and go to state 13

state 12

    (3) PROGRAM_A -> METHOD . PROGRAM_B
    (5) PROGRAM_B -> . METHOD PROGRAM_B
    (6) PROGRAM_B -> . empty
    (80) METHOD -> . func TYPEMETHOD id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
    (148) empty -> .

    func            shift and go to state 15
    void            reduce using rule 148 (empty -> .)

    METHOD                         shift and go to state 18
    PROGRAM_B                      shift and go to state 19
    empty                          shift and go to state 20

state 13

    (4) PROGRAM_A -> empty .

    void            reduce using rule 4 (PROGRAM_A -> empty .)


state 14

    (7) VARS -> var . VARS_A
    (8) VARS_A -> . TYPE colon VARS_B semicolon VARS_C
    (45) TYPE -> . int SAVE_TYPE
    (46) TYPE -> . float SAVE_TYPE
    (47) TYPE -> . string SAVE_TYPE
    (48) TYPE -> . bool SAVE_TYPE

    int             shift and go to state 23
    float           shift and go to state 24
    string          shift and go to state 25
    bool            shift and go to state 26

    VARS_A                         shift and go to state 21
    TYPE                           shift and go to state 22

state 15

    (80) METHOD -> func . TYPEMETHOD id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
    (67) TYPEMETHOD -> . TYPE
    (68) TYPEMETHOD -> . void SAVE_TYPE
    (45) TYPE -> . int SAVE_TYPE
    (46) TYPE -> . float SAVE_TYPE
    (47) TYPE -> . string SAVE_TYPE
    (48) TYPE -> . bool SAVE_TYPE

    void            shift and go to state 29
    int             shift and go to state 23
    float           shift and go to state 24
    string          shift and go to state 25
    bool            shift and go to state 26

    TYPEMETHOD                     shift and go to state 27
    TYPE                           shift and go to state 28

state 16

    (1) PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void . SAVE_TYPE start START_FUNCTION BLOCK PRINTQUADS
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    start           reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 30
    empty                          shift and go to state 5

state 17

    (2) PROGRAM_A -> VARS PROGRAM_A .

    void            reduce using rule 2 (PROGRAM_A -> VARS PROGRAM_A .)


state 18

    (5) PROGRAM_B -> METHOD . PROGRAM_B
    (5) PROGRAM_B -> . METHOD PROGRAM_B
    (6) PROGRAM_B -> . empty
    (80) METHOD -> . func TYPEMETHOD id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
    (148) empty -> .

    func            shift and go to state 15
    void            reduce using rule 148 (empty -> .)

    METHOD                         shift and go to state 18
    PROGRAM_B                      shift and go to state 31
    empty                          shift and go to state 20

state 19

    (3) PROGRAM_A -> METHOD PROGRAM_B .

    void            reduce using rule 3 (PROGRAM_A -> METHOD PROGRAM_B .)


state 20

    (6) PROGRAM_B -> empty .

    void            reduce using rule 6 (PROGRAM_B -> empty .)


state 21

    (7) VARS -> var VARS_A .

    var             reduce using rule 7 (VARS -> var VARS_A .)
    func            reduce using rule 7 (VARS -> var VARS_A .)
    void            reduce using rule 7 (VARS -> var VARS_A .)


state 22

    (8) VARS_A -> TYPE . colon VARS_B semicolon VARS_C

    colon           shift and go to state 32


state 23

    (45) TYPE -> int . SAVE_TYPE
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    colon           reduce using rule 148 (empty -> .)
    id              reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 33
    empty                          shift and go to state 5

state 24

    (46) TYPE -> float . SAVE_TYPE
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    colon           reduce using rule 148 (empty -> .)
    id              reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 34
    empty                          shift and go to state 5

state 25

    (47) TYPE -> string . SAVE_TYPE
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    colon           reduce using rule 148 (empty -> .)
    id              reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 35
    empty                          shift and go to state 5

state 26

    (48) TYPE -> bool . SAVE_TYPE
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    colon           reduce using rule 148 (empty -> .)
    id              reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 36
    empty                          shift and go to state 5

state 27

    (80) METHOD -> func TYPEMETHOD . id START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE

    id              shift and go to state 37


state 28

    (67) TYPEMETHOD -> TYPE .

    id              reduce using rule 67 (TYPEMETHOD -> TYPE .)


state 29

    (68) TYPEMETHOD -> void . SAVE_TYPE
    (150) SAVE_TYPE -> . empty
    (148) empty -> .

    id              reduce using rule 148 (empty -> .)

    SAVE_TYPE                      shift and go to state 38
    empty                          shift and go to state 5

state 30

    (1) PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE . start START_FUNCTION BLOCK PRINTQUADS

    start           shift and go to state 39


state 31

    (5) PROGRAM_B -> METHOD PROGRAM_B .

    void            reduce using rule 5 (PROGRAM_B -> METHOD PROGRAM_B .)


state 32

    (8) VARS_A -> TYPE colon . VARS_B semicolon VARS_C
    (9) VARS_B -> . SIMPLE
    (10) VARS_B -> . LIST
    (13) SIMPLE -> . id SAVE_VAR SIMPLE_A
    (16) LIST -> . id lSqrBracket VARCONSTAUX rSqrBracket SAVE_ARRAY LIST_A

    id              shift and go to state 43

    VARS_B                         shift and go to state 40
    SIMPLE                         shift and go to state 41
    LIST                           shift and go to state 42

state 33

    (45) TYPE -> int SAVE_TYPE .

    colon           reduce using rule 45 (TYPE -> int SAVE_TYPE .)
    id              reduce using rule 45 (TYPE -> int SAVE_TYPE .)


state 34

    (46) TYPE -> float SAVE_TYPE .

    colon           reduce using rule 46 (TYPE -> float SAVE_TYPE .)
    id              reduce using rule 46 (TYPE -> float SAVE_TYPE .)


state 35

    (47) TYPE -> string SAVE_TYPE .

    colon           reduce using rule 47 (TYPE -> string SAVE_TYPE .)
    id              reduce using rule 47 (TYPE -> string SAVE_TYPE .)


state 36

    (48) TYPE -> bool SAVE_TYPE .

    colon           reduce using rule 48 (TYPE -> bool SAVE_TYPE .)
    id              reduce using rule 48 (TYPE -> bool SAVE_TYPE .)


state 37

    (80) METHOD -> func TYPEMETHOD id . START_FUNCTION lParenthesis METHOD_A SAVE_COUNTER_PARAM rParenthesis SAVE_COUNTER_QUAD BLOCK END_PROCEDURE
    (149) START_FUNCTION -> . empty
    (148) empty -> .

    lParenthesis    reduce using rule 148 (empty -> .)

    START_FUNCTION                 shift and go to state 44
    empty                          shift and go to state 8

state 38

    (68) TYPEMETHOD -> void SAVE_TYPE .

    id              reduce using rule 68 (TYPEMETHOD -> void SAVE_TYPE .)


state 39

    (1) PROGRAM -> program void SAVE_TYPE globalFunc START_FUNCTION semicolon PROGRAM_A void SAVE_TYPE start . START_FUNCTION BLOCK PRINTQUADS
    (149) START_FUNCTION -> . empty
    (148) empty -> .

    lCurlyBracket   reduce using rule 148 (empty -> .)

    START_FUNCTION                 shift and go to state 45
    empty                          shift and go to state 8

state 40

    (8) VARS_A -> TYPE colon VARS_B . semicolon VARS_C

    semicolon       shift and go to state 46


state 41

    (9) VARS_B -> SIMPLE .

    semicolon       reduce using rule 9 (VARS_B -> SIMPLE .)


state 42

    (10) VARS_B -> LIST .

    semicolon       reduce using rule 10 (VARS_B -> LIST .)


state 43

    (13) SIMPLE -> id . SAVE_VAR SIMPLE_A
    (16) LIST -> id . lSqrBracket VARCONSTAUX rSqrBracket SAVE_ARRAY LIST_A
    (151) SAVE_VAR -> . empty
    (148) empty -> .

    lSqrBracket     shift and go to state 48
    comma           reduce using rule 148 (empty -> .)
    semicolon       reduce using rule 148 (empty -> .)

    SAVE_VAR                       shift and go to state 47
    empty                          shift and go to state 49

state 44
